--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,51 @@
         android:text="News"
         android:textColor="@color/black"
         android:textSize="20dp"
+        android:frontFamily="@font/g_bold"
         android:background="@color/grey"
         android:padding="10dp"
         android:textAlignment="center"
         android:gravity="center_horizontal" />
+
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/black_background"
+       >
+
+
+        <EditText
+            android:id="@+id/editTextTextPersonName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Search"
+            android:textColorHighlight="@color/grey"
+            android:textColor="@color/white"
+            android:padding="10dp"
+            android:background="@drawable/black_background"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_columnWeight="1"
+            android:inputType="textPersonName"/>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Butto"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:paddingRight="10dp"
+            android:background="@drawable/black_background"
+            android:drawableRight="@drawable/ic_baseline_search_24"
+            />
+
+    </GridLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
