--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="News"
+        android:text="I Today News"
         android:textColor="@color/black"
         android:textSize="20dp"
-        android:frontFamily="@font/g_bold"
         android:background="@color/grey"
         android:padding="10dp"
         android:textAlignment="center"
+        android:fontFamily="@font/g_bold"
         android:gravity="center_horizontal" />
 
 
@@ -35,9 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Search"
+            android:text="Search"
             android:textColorHighlight="@color/grey"
-            android:textColor="@color/white"
+            android:textColor="@color/grey"
             android:padding="10dp"
             android:background="@drawable/black_background"
             android:layout_column="0"
