gradient.xml has been added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,8 @@
         android:layout_margin="10dp"
         android:columnCount="2"
         android:rowCount="2"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:background="@drawable/black_background"
        >
 
