--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -30,9 +30,11 @@
                 android:background="@drawable/gradient"/>
 
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="This is the text"
+                android:padding="10dp"
+                android:text="TITLE"
                 android:textSize="20dp"
                 android:fontFamily="@font/g_bold"
                 android:textColor="@color/white"
@@ -48,7 +50,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" Source"
-                    android:textSize="20dp"
+                    android:textSize="16dp"
+                    android:padding="10dp"
+
                     android:fontFamily="@font/g_bold"
                     android:ems="15"
                     android:textColor="@color/white"
@@ -57,9 +61,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="This is the text"
+                    android:text="Date"
+                    android:padding="10dp"
                     android:gravity="right"
-                    android:textSize="20dp"
+                    android:textSize="16dp"
                     android:fontFamily="@font/g_light"
                     android:textColor="@color/white"
                     android:id="@+id/tvDate"/>
