items  has been defined

--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -8,9 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:id="@+id/cardView"
         app:cardElevation="4dp"
         app:cardCornerRadius="10dp"
-        android:padding="10dp"
         >
 
         <FrameLayout
@@ -30,7 +30,6 @@
                 android:background="@drawable/gradient"/>
 
             <TextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
@@ -38,7 +37,7 @@
                 android:textSize="20dp"
                 android:fontFamily="@font/g_bold"
                 android:textColor="@color/white"
-                android:id="@+id/textViewId"/>
+                android:id="@+id/tvTitle"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
